force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <label>Case History</label>
    <pluralLabel>Case Histories</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Case History Number</label>
        <displayFormat>CH-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <type>Lookup</type>
        <referenceTo>Case_Request__c</referenceTo>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Time_Closed__c</fullName>
        <label>Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Met__c</fullName>
        <label>SLA Met</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
</CustomObject>