force-app/main/default/objects/Case_History__c/fields/Case__c.field-meta.xml
<CustomField>
  <fullName>Case__c</fullName>
  <label>Case</label>
  <type>Lookup</type>
  <referenceTo>Case_Request__c</referenceTo>
  <relationshipName>Case_Request</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>