force-app/main/default/objects/Case_History__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
  <fullName>SLA_Met__c</fullName>
  <label>SLA Met</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>